Make scroll frames (i.e., overflow != visible) no longer be font size inflation flow roots.  This fixes phoronix.com/reddit.com/others at the expense of youtube.com.  This reverts b64bfa138619890a01826bde8974cc974b45a6f5 (bug 760098) which in turn reverted 9620f50be9fa8be44931decf1e57ce25f51da812 (Bug 747720, patch 7) which in turn reverted part of 9499f6b28addcbcd9c480eb80cfe6c4c63a4a3a1 (Bug 706193, patch 2).  (Bug 747720)  r=backout